@@ -8,7 +8,7 @@ WWW::Mechanize - Handy web browsing in a Perl object
 
 Version 1.05_02
 
-    $Header: /cvsroot/www-mechanize/www-mechanize/lib/WWW/Mechanize.pm,v 1.152 2004/10/24 01:08:15 markjugg Exp $
+    $Header: /cvsroot/www-mechanize/www-mechanize/lib/WWW/Mechanize.pm,v 1.153 2004/10/30 22:23:10 markjugg Exp $
 
 =cut
 
@@ -1168,6 +1168,17 @@ more than one tag, as in:
 
     $mech->find_link( tag_regex => qr/^(a|frame)$/ );
 
+Currently, the following tags are supported, with Mech looking at these
+particular tag attributes:
+
+ <a      href="">
+ <area   href="">
+ <frame  src="">
+ <iframe src="">
+ <meta   content="">
+
+Other tags will be ignored.
+
 =item * C<< n => number >>
 
 Matches against the I<n>th link.
@@ -1713,6 +1724,8 @@ property with L<WWW::Mechanize::Link> objects.
 
 =cut
 
+# NOTE: When this list is updated, also update the docs
+# for the find_links() 'tag_regex' attribute which refers to it.
 my %urltags = (
     a => "href",
     area => "href",
