@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.153 2004/10/24 01:06:51 markjugg Exp $
+# $Id: Changes,v 1.154 2004/10/30 22:23:09 markjugg Exp $
 Revision history for Perl extension WWW::Mechanize
 
 XXX
@@ -30,6 +30,9 @@ XXX
 	* Move select() to better location in docs. Document and test the return values.
 	  The return value is now "1" on success instead of the undocumented behavior 
 	  of returning a form value. (RT#6138, spotted by MJD, patched by Mark Stosberg)
+
+	* Possible matching tags for the find_link() 'tag_regex' attribute are now
+	  documented. (RT#2989, by Mark Stosberg)
 
 1.05_02	Sat Oct  2 16:55:59 CDT 2004
 	[ENHANCEMENTS]
